@@ -1,3 +1,13 @@
+2011-01-16  Adam Barth  <abarth@webkit.org>
+
+        Update more include paths to reflect WebKit move.
+
+        * DumpRenderTree/chromium/EventSender.cpp:
+        (EventSender::keyDown):
+        (EventSender::needsShiftModifier):
+        * DumpRenderTree/chromium/WebThemeEngineDRTMac.h:
+        * DumpRenderTree/chromium/WebThemeEngineDRTMac.mm:
+
 2011-01-16  Kent Tamura  <tkent@chromium.org>
 
         Unreviewed, Chromium build fix.
